force-app/main/default/objects/Object_Mapping__mdt/fields/Payload_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Payload_Field_API_Name__c</fullName>
    <label>Payload Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>