force-app/main/default/objects/Object_Mapping__mdt/fields/Related_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Mapping__c</fullName>
    <label>Related Object Mapping</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Object_Mappings</relationshipLabel>
    <relationshipName>Object_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>