force-app/main/default/objects/Object_Mapping__mdt/fields/SObject_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Field_API_Name__c</fullName>
    <label>SObject Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>